// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store utils. updateErrors field1 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {
        "testField1": "Error for field 1",
      },
      "focused": false,
      "hasErrors": true,
      "hasWarnings": false,
      "submitted": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 1",
        "focused": false,
        "warning": "",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrors field1, field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {
        "testField1": "Error for field 1",
        "testField2": "Error for field 2",
      },
      "focused": false,
      "hasErrors": true,
      "hasWarnings": false,
      "submitted": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 1",
        "focused": false,
        "warning": "",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 2",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrors field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {
        "testField2": "Error for field 2",
      },
      "focused": false,
      "hasErrors": true,
      "hasWarnings": false,
      "submitted": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 2",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(error) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {
        "testField1": "Error for field 1",
      },
      "focused": false,
      "hasErrors": true,
      "hasWarnings": false,
      "submitted": false,
      "warningsMap": Object {},
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 1",
        "focused": false,
        "warning": "",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(error), field1(warning) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {
        "testField1": "Error for field 1",
      },
      "focused": false,
      "hasErrors": true,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 1",
        "focused": false,
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(error, warning) field2(error, warning) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {
        "testField1": "Error for field 1",
        "testField2": "Error for field 2",
      },
      "focused": false,
      "hasErrors": true,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField1": "Warning for field 2",
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 1",
        "focused": false,
        "warning": "Warning for field 2",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "Error for field 2",
        "focused": false,
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateErrorsAndWarnings field1(warning) 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {},
      "focused": false,
      "hasErrors": false,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarning field1, field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {},
      "focused": false,
      "hasErrors": false,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field1 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {},
      "focused": false,
      "hasErrors": false,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field1 and then field2 = undefined 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {},
      "focused": false,
      "hasErrors": false,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field1 and then field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {},
      "focused": false,
      "hasErrors": false,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField1": "Warning for field 1",
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 1",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;

exports[`Store utils. updateWarnings field2 1`] = `
Object {
  "testForm": Object {
    "form": Object {
      "activeField": "",
      "blurred": false,
      "changed": false,
      "errorsMap": Object {},
      "focused": false,
      "hasErrors": false,
      "hasWarnings": true,
      "submitted": false,
      "warningsMap": Object {
        "testField2": "Warning for field 2",
      },
    },
    "meta": Object {
      "testField1": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "",
      },
      "testField2": Object {
        "active": false,
        "blurred": false,
        "changed": false,
        "error": "",
        "focused": false,
        "warning": "Warning for field 2",
      },
    },
    "values": Object {
      "testField1": "",
      "testField2": "",
    },
  },
}
`;
